feat: 메시지 정보 반환 로직 구현